# Motor_Control

./: .gitignore  EposCmd.h  Motor.cpp  Motor.hpp  Motor_error.cpp  README.md  getter_motor.cpp  nav_motors.cpp  nav_motors.hpp
motor_controls.ws/: motor_control_launch.py
motor_controls.ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
motor_controls.ws/install/controller/share/controller/: package.sh
motor_controls.ws/install/coucou/include/coucou/msg/: motor_command.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
motor_controls.ws/install/coucou/lib/coucou/: suscriber  suscriber_test  talker
motor_controls.ws/install/coucou/share/coucou/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
motor_controls.ws/install/coucou/share/coucou/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  coucouConfig.cmake  coucou__rosidl_generator_cExport.cmake  coucou__rosidl_generator_cppExport.cmake  coucou__rosidl_typesupport_cExport.cmake  coucou__rosidl_typesupport_cppExport.cmake  coucou__rosidl_typesupport_introspection_cppExport.cmake
motor_controls.ws/install/coucou/share/coucou/msg/: MotorCommand.idl
motor_controls.ws/install/ethercat_device_configurator/lib/ethercat_device_configurator/: standalone
motor_controls.ws/install/ethercat_device_configurator/share/ethercat_device_configurator/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
motor_controls.ws/install/ethercat_device_configurator/share/ethercat_device_configurator/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ethercat_device_configuratorConfig-version.cmake  ethercat_device_configurator__rosidl_generator_cppExport.cmake  (+7 more)
motor_controls.ws/install/ethercat_device_configurator/share/maxon_epos_ethercat_sdk/: package.dsv
motor_controls.ws/install/ethercat_device_configurator/share/message_logger/: local_setup.sh
motor_controls.ws/install/ethercat_device_configurator/share/soem_rsl/: local_setup.dsv
motor_controls.ws/install/ethercat_sdk_master/share/ethercat_sdk_master/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
motor_controls.ws/install/maxon_epos_ethercat_sdk/share/maxon_epos_ethercat_sdk/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
motor_controls.ws/install/message_logger/share/message_logger/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
motor_controls.ws/install/motor_control_interfaces/share/motor_control_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
motor_controls.ws/install/soem/share/soem/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
motor_controls.ws/install/soem_interface/share/soem_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
motor_controls.ws/install/soem_rsl/share/soem_rsl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
motor_controls.ws/log/: latest_build  latest_list
motor_controls.ws/src/controller/: setup.py
motor_controls.ws/src/controller/controller/: CS_subscriber.py
motor_controls.ws/src/controller/controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
motor_controls.ws/src/controller/controller/log/: latest_build
motor_controls.ws/src/controller/install/: local_setup.sh  setup.sh
motor_controls.ws/src/controller/log/: latest_build
motor_controls.ws/src/coucou/: CMakeLists.txt  package.xml
motor_controls.ws/src/coucou/src/: read.cpp  read_test.cpp  send.cpp
motor_controls.ws/src/ethercat_device_configurator/: CMakeLists (copy).txt  CMakeLists.txt  package.xml
motor_controls.ws/src/ethercat_device_configurator/config_mot/: setup.yaml
motor_controls.ws/src/ethercat_device_configurator/config_mot/device_configurations/: conf_gripper.yaml  conf_j1.yaml  conf_j2.yaml  conf_j3.yaml  maxon.yaml
motor_controls.ws/src/ethercat_device_configurator/ethercat_sdk_master/: CMakeLists.txt
motor_controls.ws/src/ethercat_device_configurator/include/ethercat_device_configurator/: EthercatDeviceConfigurator.hpp
motor_controls.ws/src/ethercat_device_configurator/include/ethercat_device_configurator/soem/soem/: ethercatmain.c
motor_controls.ws/src/ethercat_device_configurator/maxon_epos_ethercat_sdk/: CMakeLists.txt
motor_controls.ws/src/ethercat_device_configurator/message_logger/: CMakeLists.txt
motor_controls.ws/src/ethercat_device_configurator/soem_interface/soem/: CMakeLists.txt  package.xml
motor_controls.ws/src/ethercat_device_configurator/soem_interface/soem/include/soem/soem/: ethercattype.h
motor_controls.ws/src/ethercat_device_configurator/soem_interface/soem_interface/: CMakeLists.txt
motor_controls.ws/src/ethercat_device_configurator/src/: EthercatDeviceConfigurator.cpp  motor_control.cpp  standalone.cpp  standalone.txt
motor_controls.ws/src/ethercat_device_configurator/src/ethercat_device_configurator/: EthercatDeviceConfigurator.cpp  motor_control.cpp
motor_controls.ws/src/ethercat_device_configurator/src/soem_interface/: EthercatBusBase.cpp
motor_controls.ws/src/ethercat_sdk_master/: CMakeLists.txt
motor_controls.ws/src/maxon_epos_ethercat_sdk/: CMakeLists.txt
motor_controls.ws/src/maxon_epos_ethercat_sdk/src/maxon_epos_ethercat_sdk/: ConfigureParameters.cpp
motor_controls.ws/src/message_logger/: CMakeLists.txt  package.xml
motor_controls.ws/src/motor_control_interfaces/: CMakeLists.txt
motor_controls.ws/src/motor_control_interfaces/msg/: MotorCommand.msg
motor_controls.ws/src/soem/: CMakeLists.txt
motor_controls.ws/src/soem/src/soem/soem/: ethercatprint.c  ethercatsoe.c
motor_controls.ws/src/soem_interface/: CMakeLists.txt
motor_controls.ws/src/soem_interface/include/soem_interface/: EthercatBusBase.hpp  EthercatSlaveBase.hpp
motor_controls.ws/src/soem_interface/src/soem_interface/: EthercatBusBase.cpp
(+75 files in other folders)
