<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_device_configurator</name>
  <version>0.6.0</version>
  <description>Core C++ library to interface one or multiple drives. Contains abstract base classes for the communication interface.</description>

  <license>BSDv3</license>
  <author email="jungerj@student.ethz.ch">Jonas Junger</author>
  <author email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</author>
  <maintainer email="jungerj@student.ethz.ch">Jonas Junger</maintainer>
  <maintainer email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</maintainer>
  <url type="website">https://github.com/leggedrobotics/ethercat_device_configurator</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>Threads</depend>
  <depend>message_logger</depend>
  <depend>soem_interface</depend>
  <depend>ethercat_sdk_master</depend>
  <depend>maxon_epos_ethercat_sdk</depend>
  <depend>motor_control_interfaces</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>


  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
